Fixed #7 by granting the crafting advancements only for actually crafted glow sticks. Fixed #8 by replacing the random despawn chance with an exact lifetime in seconds. Fixed glow sticks next to redstone components staying lit and immortal forever. Fixed placed glow sticks dropping nothing, floating in the air or being destroyed by throws. Fixed advancements and recipe book hints not unlocking for several glow stick actions. Changed `despawnTicks` to `glowStickLifetimeSeconds`, migrated on first start, default 36 minutes. Changed "Sharing is caring." from a challenge to a goal, so it no longer plays the challenge tune. Changed glow stick colors to runtime tinting of one shared texture set. Resource packs replacing single colored glow stick textures need to be updated. Added placing and picking up of normal glow sticks, both toggleable in the config. Added redstone recharging and evenly lit glow stick chains with a configurable size limit. Added the "Follow the light" advancement and an optional survival recipe for creative sticks. Added self-lit rendering, a flight animation and a particle trail for thrown glow sticks.